--- a/src/Components/CSS/LandingPage.module.css
+++ b/src/Components/CSS/LandingPage.module.css
@@ -1,5 +1,91 @@
-.headerContainer {
-    background-color: #E5E5E5; 
-  /*   width: 100%;
-    height: 100%; */
+.landing {
+  width: 1440px;
+  height: 1024px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
+
+.header {
+  height: 10%;
+  display: flex;
+  padding: 5px 0px 5px 20px;
+  align-items: center;
+  gap: 25px;
+  
+}
+
+.name_city{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 9px;
+  
+}
+
+.container {
+  box-sizing: border-box;
+  width: 526px;
+  height: 739px;
+  background: #fcfcfc;
+  border: 1px solid #dedede;
+  box-shadow: -1px 7px 8px -5px rgba(0, 0, 0, 0.14);
+  border-radius: 5px;
+}
+
+.profile {
+  width: 50px;
+  height: 50px;
+  left: 482px;
+  top: 158px;
+}
+
+.name {
+margin: 0%;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: bold;
+  color: #000000;
+}
+
+.sitePost {
+  margin: 0%;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: #000000;
+}
+
+.icons {
+  gap: 12px;
+  display: flex;
+  justify-content: flex-start;
+  margin: 17px 0px 28px 25px;
+  align-items: center;
+}
+
+.description_parent {
+  height: 50%;
+}
+
+.description {
+  padding: 0px 20px 0px 20px;
+  text-align: left;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 12px;
+  line-height: 15px;
+  color: #000000;
+}
+
+.description > span {
+  font-weight: bold;
+}
+
+
