--- a/src/Components/CSS/Post.module.css
+++ b/src/Components/CSS/Post.module.css
@@ -1,46 +1,65 @@
+.container_post {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 5px;
+  height: 50%;
+}
+
 .comments {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 15px;
-    /* identical to box height */
-    color: #000000;
+  margin: 0%;
+  text-align: left;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 12px;
+  line-height: 15px;
+  color: #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 25px;
+}
+
+.comments p {
+  margin: 0%;
+  padding: 0%;
+}
+.commentSpan {
+  font-weight: bold;
+}
+
+.div_area {
+  background-color: #f1f1f1;
+  height: 55px;
+  display: flex;
+  padding: 0px 20px 0px 15px;
+  margin: 0px 25px 24px 25px;
+  border-radius: 5px;
+  align-items: center;
 }
 
 .input {
-    /* sacar los bordes que quede transparente */
-    background-color: #F1F1F1;
-    width: 477px;
-height: 55px;
-left: 482px;
-top: 803px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 15px;
-    /* identical to box height */
-    color: #000000;
-    
+  width: 90%;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #000000;
 }
 
 .post {
-    width: 39px;
-    height: 15px;
-    left: 905px;
-    top: 823px;
-    
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 12px;
-    line-height: 15px;
-    /* identical to box height */
-    
-    text-align: right;
-    
-    color: #3D8AFF;
-    
-    
+  width: 10%;
+  height: 15px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  border: none;
+  outline: none;
+  color: #3d8aff;
 }
