--- a/src/Components/CSS/Carousel.module.css
+++ b/src/Components/CSS/Carousel.module.css
@@ -8,12 +8,8 @@
 }
 
 .img {
-  object-fit: scale-down;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
-.swiper {
-  width: 526px;
-  height: 325px;
-  left: 458px;
-  top: 218px;
-}
