--- a/src/Components/CSS/Post.module.css
+++ b/src/Components/CSS/Post.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   border-radius: 5px;
-  height: 50%;
+  height: 60%;
 }
 
 .comments {
@@ -11,13 +11,14 @@
   text-align: left;
   font-family: "Inter";
   font-style: normal;
+  font-weight: 400;
   font-size: 12px;
   line-height: 15px;
   color: #000000;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding-left: 25px;
+  padding-left: 20px;
 }
 
 .comments p {
@@ -25,7 +26,12 @@
   padding: 0%;
 }
 .commentSpan {
-  font-weight: bold;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 15px;
+  color: #000000;
 }
 
 .div_area {
@@ -61,5 +67,6 @@
   line-height: 15px;
   border: none;
   outline: none;
+  cursor: pointer;
   color: #3d8aff;
 }
